@@ -179,7 +179,7 @@ public abstract class AUiSectionSnippet implements IUiSnippet {
 		QualifiedName key = getSectionExpansionStateKey();
 		try {
 			if (key != null) {
-				stateStorage.setPersistentProperty(key, new Boolean(isExpanded()).toString());
+				stateStorage.setPersistentProperty(key, Boolean.valueOf(isExpanded()).toString());
 			}
 		} catch (CoreException e) {
 			Activator.getDefault().getLog().log(new Status(Status.WARNING, Activator.getPluginId(), "Could not save the expansion state"));
